--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,12 @@
-{
-    "builds": [{
-        "src": "ggfm_dbs_project/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    }],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "ggfm_dbs_project/wsgi.py"
-        }
-    ]
-}
+
+
+    {
+      "builds": [{ "src": "ggfm_dbs_project/wsgi.py", 
+      "use": "@vercel/python", "config": { "maxLambdaSize": "15mb" } }],
+
+      "routes": [{ "src": "/(.*)", "dest": "ggfm_dbs_project/wsgi.py" }],
+
+      "buildCommand": "pip install -r requirements.txt && python manage.py collectstatic --noinput",
+      
+      "outputDirectory": "staticfiles"
+    }
