--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,37 @@ Django==5.2.3
 django-cors-headers==3.14.0
 sqlparse==0.5.3
 gunicorn==23.0.0
+psycopg2-binary==2.9.6
+whitenoise==6.4.0
+django-environ==0.9.0
+django-heroku==0.3.1
+django-debug-toolbar==4.0.1
+django-extensions==3.2.1
+django-filter==23.1
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+django-celery-beat==2.4.0
+django-celery-results==2.4.0
+celery==5.3.1
+redis==4.6.0
+django-storages==1.13.2
+boto3==1.28.10
+botocore==1.31.10
+django-redis==5.2.0
+django-webpack-loader==1.9.0
+webpack-bundle-tracker==0.17.0
+django-compressor==4.3.0
+html5lib==1.1
+beautifulsoup4==4.12.2
+lxml==4.9.3
+requests==2.31.0
+requests-oauthlib==1.3.1
+oauthlib==3.2.2
+Pillow==10.0.0
+markdown==3.4.3
+django-markdownx==4.0.0
+django-taggit==3.4.0
+django-taggit-serializer==1.4.0
+django-ckeditor==6.5.0
+django-allauth==0.52.0
 
